--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 * {
     text-align: center;
     font-family:  'Trade Winds';
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 section {
     border: 2px solid #504f4f;
